@@ -38,19 +38,29 @@ Disassembly of section .text:
 0+0070 <[^>]*> bc250000 	cache	0x5,0\(at\)
 0+0074 <[^>]*> bc457fff 	cache	0x5,32767\(v0\)
 0+0078 <[^>]*> bc658000 	cache	0x5,-32768\(v1\)
-0+007c <[^>]*> 42000018 	eret
-0+0080 <[^>]*> 42000008 	tlbp
-0+0084 <[^>]*> 42000001 	tlbr
-0+0088 <[^>]*> 42000002 	tlbwi
-0+008c <[^>]*> 42000006 	tlbwr
-0+0090 <[^>]*> 42000020 	wait
-0+0094 <[^>]*> 42000020 	wait
-0+0098 <[^>]*> 4359e260 	wait	0x56789
-0+009c <[^>]*> 0000000d 	break
-0+00a0 <[^>]*> 0000000d 	break
-0+00a4 <[^>]*> 0345000d 	break	0x345
-0+00a8 <[^>]*> 0048d14d 	break	0x48,0x345
-0+00ac <[^>]*> 7000003f 	sdbbp
-0+00b0 <[^>]*> 7000003f 	sdbbp
-0+00b4 <[^>]*> 7159e27f 	sdbbp	0x56789
-	...
+0+007c <[^>]*> 3c010001 	lui	at,0x1
+0+0080 <[^>]*> 00240821 	addu	at,at,a0
+0+0084 <[^>]*> bc258000 	cache	0x5,-32768\(at\)
+0+0088 <[^>]*> 3c01ffff 	lui	at,0xffff
+0+008c <[^>]*> 00250821 	addu	at,at,a1
+0+0090 <[^>]*> bc257fff 	cache	0x5,32767\(at\)
+0+0094 <[^>]*> 3c010001 	lui	at,0x1
+0+0098 <[^>]*> bc258000 	cache	0x5,-32768\(at\)
+0+009c <[^>]*> 3c01ffff 	lui	at,0xffff
+0+00a0 <[^>]*> bc257fff 	cache	0x5,32767\(at\)
+0+00a4 <[^>]*> 42000018 	eret
+0+00a8 <[^>]*> 42000008 	tlbp
+0+00ac <[^>]*> 42000001 	tlbr
+0+00b0 <[^>]*> 42000002 	tlbwi
+0+00b4 <[^>]*> 42000006 	tlbwr
+0+00b8 <[^>]*> 42000020 	wait
+0+00bc <[^>]*> 42000020 	wait
+0+00c0 <[^>]*> 4359e260 	wait	0x56789
+0+00c4 <[^>]*> 0000000d 	break
+0+00c8 <[^>]*> 0000000d 	break
+0+00cc <[^>]*> 0345000d 	break	0x345
+0+00d0 <[^>]*> 0048d14d 	break	0x48,0x345
+0+00d4 <[^>]*> 7000003f 	sdbbp
+0+00d8 <[^>]*> 7000003f 	sdbbp
+0+00dc <[^>]*> 7159e27f 	sdbbp	0x56789
+	\.\.\.
